url updated for sending mails

--- a/app/apidoc/api/api_project.json
+++ b/app/apidoc/api/api_project.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "API Documentation for Meeting Planner",
   "title": "apiDoc for Meeting-Planner",
-  "url": "http://localhost:3000",
+  "url": "http://api.meeting.raghavendra-pujar.site",
   "sampleUrl": false,
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2019-07-09T20:55:25.511Z",
+    "time": "2019-07-10T17:13:04.974Z",
     "url": "http://apidocjs.com",
     "version": "0.17.7"
   }
